# tystnad

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
cmake/: Info.plist.in  tystnad.desktop
data/: tystnad.icns
include/: audio_manager.hpp  config_dialog.hpp  launch_agent.hpp  setting.hpp  svg.hpp  wav.hpp
py/: bin_to_header.py
src/: config_dialog.cpp  launch_agent.cpp  main.cpp  wav.cpp
